--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,9 @@
     <div id="max-independent-set-button">
       Max Independent Set
     </div>
+    <div id="three-color-button">
+      3-Coloring
+    </div>
   </div>
   <div class="flex-container">
     <div class="center-container">
@@ -58,9 +61,16 @@
               </h3>
             </div>
             <div id="mis-content">
-              <h3>Dynamic Programming Table</h3>
+              <h3>Maximum Independent Set</h3>
               <table class="table">
                 <tbody id="tbody">
+                </tbody>
+              </table>
+            </div>
+            <div id="three-color-content">
+              <h3>3-Coloring</h3>
+              <table class="table">
+                <tbody id="three-color-body">
                 </tbody>
               </table>
             </div>
@@ -76,6 +86,7 @@
             </div>
           </div>
         </div>
+
       </div>
       <div id="right-container">
         <div id="nice-td-container">
