--- a/public/index.html
+++ b/public/index.html
@@ -4,47 +4,39 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Styling -->
+
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css" />
+
+  <!-- Material Icons from Google -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- Inter font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-  <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet' type='text/css'>
+
+  <!-- Katex Styling -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css"
     integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
-  <!-- The loading of KaTeX is deferred to speed up page rendering -->
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"
-    integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz"
-    crossorigin="anonymous"></script>
-  <!-- To automatically render math in text elements, include the auto-render extension: -->
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js"
-    integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous"
-    onload="renderMathInElement(document.body);"></script>
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/intro.js@2.9.3/intro.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intro.js@2.9.3/introjs.min.css">
-  <script type="module" src="js/main.js"></script>
-  <script type="module" src="js/niceTreeDecomposition.js"></script>
-  <script type="module" src="js/graphReader.js"></script>
-  <script type="module" src="js/readTree.js"></script>
-  <script type="module" src="js/graph.js"></script>
-  <script type="module" src="js/controller.js"></script>
-  <script type="module" src="js/content.js"></script>
+
   <title>Graph Width Visualizer</title>
 </head>
 
 <body>
   <div class="topnav" id="myTopnav">
+
     <div class="project-title">
-      Graph Width Visualizer
+      <a href="?home" class="home-link">
+        Graph Width Visualizer </a>
     </div>
+
   </div>
   <div class="flex-container">
     <div class="center-container">
       <div id="left-container">
         <h2 id="content-title"></h2>
         <div class="theory-content">
-
-
           <div id="td-content">
             A <strong>tree decomposition</strong> of <span id="one"></span> is a tree <span id="treeMath"></span>
             that consists of vertices structured in a tree like way. Each node in the tree <span id="treeMath2"></span>
@@ -67,11 +59,55 @@
             <strong>
               <p>Exercises</p>
             </strong>
-            <p>Create the tree decomposition of the current graph.</p>
+            <ol>
+              <li>
+                <div>Create the tree decomposition of the current graph. \n check your solution</div>
+                <div>Check your solution</div>
+              </li>
+            </ol>
           </div>
           <div class="seperator-content">
-            <p>Seperator content....</p>
-            <p>Hover over a node in the tree decomposition to see how it seperates the graph.</p>
+            <div>Before exploring treewidth and tree decomposition it is important to understand the concept of a graph
+              separator (also known as a <a href="https://en.wikipedia.org/wiki/Vertex_separator">vertex separator</a>).
+
+              A subset containing some vertices in the graph \(S \subset V \) is a graph seperator if the
+              removal of that
+              set leaves the graph into several connected components.
+            </div>
+            <h3>Minimal Seperators</h3>
+            <div>
+              a Minimal...
+            </div>
+            <div class="exercises">
+              <div id="exercise-1" class="exercise">
+                <div id="exercise-1-title" class="exercise-title"><strong>Exercise 1:</strong> Find a seperator in the
+                  graph</div>
+                <div class="exercise-1-content">
+                  <div class="exercise-result" id="exercise-1-result">\(S=\{\}\)</div>
+                </div>
+
+              </div>
+
+              <div id="exercise-2" class="exercise">
+                <div id="exercise-2-title" class="exercise-title">
+                  <strong>Exercise 2:</strong> Find a minimal separator in the graph
+                </div>
+
+                <div class="exercise-2-content">
+                  <div class="exercise-result" id="exercise-2-result">\(S=\{\}\)</div>
+                </div>
+              </div>
+
+              <div id="exercise-3" class="exercise">
+                <div id="exercise-3-title" class="exercise-title">
+                  <strong>Exercise 3:</strong> Find a balanced separator in the graph
+                </div>
+
+                <div class="exercise-3-content">
+                  <div class="exercise-result" id="exercise-3-result">\(S=\{\}\)</div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="nice-td-content">
             <p>Nice td content....</p>
@@ -106,9 +142,23 @@
         <div id="graph-container">
           <svg id="graph-svg">
             <div class="graph-controls">
+              <i id="myBtn" class="material-icons md-48">help</i>
               <i id="reset-draw-graph" class="material-icons md-48">palette</i>
               <i id="random-graph-button" class="material-icons md-48">shuffle</i>
-              <i id="myBtn" class="material-icons md-48">help</i>
+              <div class="vertices-number-container">
+                <p>V = </p>
+                <span id="vertices-decrement" class="material-icons md-48">keyboard_arrow_left</span>
+                <span id="number-of-vertices">10</span>
+                <span id="vertices-increment" class="material-icons md-48">keyboard_arrow_right</span>
+              </div>
+              <div class="edges-number-container">
+                <p>E = </p>
+                <span id="edges-decrement" class="material-icons md-48">keyboard_arrow_left</span>
+                <span id="number-of-edges">10</span>
+                <span id="edges-increment" class="material-icons md-48">keyboard_arrow_right</span>
+              </div>
+
+
               <div id="myModal" class="modal">
 
                 <!-- Modal content -->
@@ -129,12 +179,7 @@
                   </div>
                 </div>
               </div>
-              <!--               <div class="vertices-number-container">
-                <p>V = </p>
-                <span class="material-icons md-48">keyboard_arrow_left</span>
-                <span id="number-of-vertices">10</span>
-                <span class="material-icons md-48">keyboard_arrow_right</span>
-              </div> -->
+
             </div>
           </svg>
         </div>
@@ -150,6 +195,7 @@
       <div id="right-container">
         <div id="nice-td-container">
           <svg id='nice-td-svg'>
+            <span id="dp-arrow" class="material-icons">arrow_right_alt</span>
             <div id="nice-tree-decomposition-button" class="nice-td-controls">
               <button class="pure-material-button-contained">Compute Nice Tree Decomposition</button>
             </div>
@@ -177,31 +223,55 @@
       </div>
     </div>
   </div>
+  <!-- Global Scripts -->
+
+  <!-- Katex -->
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"
+    integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz"
+    crossorigin="anonymous"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js"
+    integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous"
+    onload="renderMathInElement(document.body);"></script>
+
+  <!-- Force In A Box -->
+  <script type="text/javascript" src="https://unpkg.com/force-in-a-box/dist/forceInABox.js"></script>
+
+  <!-- Jquery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+  <!-- D3.js -->
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+
+  <!-- Content object -->
   <script src="js/content.js"></script>
-  <script src="js/controller.js"></script>
+
+  <!-- Control flow of the app -->
+  <script type="module" src=" js/controller.js"></script>
+
+  <!-- Custom Code -->
+
+  <!--   <script type="module" src="js/graph.js"></script>
+  <script type="module" src="js/niceTreeDecomposition.js"></script>
+  <script type="module" src="js/treeDecomposition.js"></script>
+  <script type="module" src="js/readTree.js"></script>
+  <script type="module" src="js/graphReader.js"></script>
+  <script type="module" src="js/helpers.js"></script>
+
+  <!-- Event listener for Katex -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      renderMathInElement(document.body, {
+        delimiters: [
+          { left: "$$", right: "$$", display: false },
+          { left: "\\[", right: "\\]", display: true },
+          { left: "$", right: "$", display: false },
+          { left: "\\(", right: "\\)", display: false }
+        ]
+        // ...options...
+      });
+    });
+  </script>
 </body>
 
 </html>
-
-<!--           <div id="app-interface">
-            <div class="error-messages">
-              <h3 id="error-message">Create a graph before computing a tree decomposition!</h3>
-              <h3 id="nice-tree-error-message">You must create a tree decomposition before you can create a nice one!
-              </h3>
-              <h3 id="algorithm-error-message">Before running an algorithm you must create a nice tree decomposition!
-              </h3>
-            </div>
-            <div id="three-color-content">
-
-            </div>
-            <div id="app-content">
-              <h3 id="info-title">App Interface</h3>
-              <div>
-                <ul>
-                  <li>Add a vertex by left-clicking within the graph container</li>
-                  <li id="bob">Add an edge by dragging from one vertex to another</li>
-                  <li>Delete a node by right-clicking it</li>
-                </ul>
-              </div>
-            </div>
-          </div> -->
