--- a/public/index.html
+++ b/public/index.html
@@ -1,298 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/style.css" />
 
-  <!-- Styling -->
+    <!-- Material Icons from Google -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
 
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="css/style.css" />
+    <!-- Inter font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Material Icons from Google -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Katex Styling -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css"
+      integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq"
+      crossorigin="anonymous"
+    />
 
-  <!-- Inter font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Walter+Turncoat&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Katex Styling -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css"
-    integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+    <title>Graph Width Visualizer</title>
+  </head>
 
-  <title>Graph Width Visualizer</title>
-</head>
+  <body>
+    <div class="main" id="main"></div>
+    <!-- Katex -->
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"
+      integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js"
+      integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI"
+      crossorigin="anonymous"
+      onload="renderMathInElement(document.body);"
+    ></script>
 
-<body>
-<!--   <div class="topnav" id="myTopnav">
+    <!-- Force In A Box -->
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/force-in-a-box/dist/forceInABox.js"
+    ></script>
 
-    <div class="project-title">
-      <a href="?home" class="home-link">
-        Graph Width Visualizer </a>
-    </div>
+    <!-- Jquery -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
 
-  </div> -->
-  <div class="flex-container">
-    <div class="center-container">
-      <div id="left-container">
-        <h2 id="content-title"></h2>
-        <div class="theory-content">
-          <div class="seperator-content">
-            <div>Before exploring treewidth and tree decompositions it is important to understand the concept of a graph
-              separator (also known as a <a href="https://en.wikipedia.org/wiki/Vertex_separator">vertex separator</a>).
-              <br />
-              <h3>Vertex Separator</h3>
-              A subset \(S \subset V \) containing some vertices in the graph is a seperator if the
-              removal of \( S \) cuts the graph into several connected components.
-            </div>
-            <h3>Minimal Seperators</h3>
-            <div>
-              We say that \(S\) is a minimal separator if no proper subset of \(S\) contains a separator.
-              <br /><br />
-              That is if
-              \(S=\{A,B\}\) is a separator in some graph. For the seperator to be minimal these must be true:
-              <br /><br />
-              \( S_1=\{A\} \) cannot be a separator in the graph.
-              <br />
-              \( S_2=\{ B\} \) cannot be a separator in the graph.
-            </div>
+    <!-- D3.js -->
+    <script src="https://d3js.org/d3.v5.min.js"></script>
 
-            <h3>Balanced Separator</h3>
-            <div>A separator \(S\) is balanced if every component of <span class="some-math">\( G \setminus S \) has
-                atmost \( \dfrac{V(G)-S}{2}
-                \) vertices.</span>
-              <!-- <br /> -->
-              That is once
-              you remove the separator from the graph the remaining components must not contain more vertices than the
-              size of the their current graph / 2.</div>
+    <!-- Content object -->
+    <script src="js/content.js"></script>
 
+    <!-- Control flow of the app -->
+    <script type="module" src=" js/controller.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/typeit@6.1.1/dist/typeit.min.js"></script>
 
-            <div class="exercises">
-              <p class="separator-exercises-info">Click on an exercise to start it. Click on a vertex in the graph to
-                include it into the set \( S \) and
-                click on the vertex again to remove it from \( S \).</p>
-              <div id="exercise-1" class="exercise">
-                <div id="exercise-1-title" class="exercise-title"><strong>Exercise 1:</strong> Find a seperator in the
-                  graph</div>
-                <div class="exercise-1-content">
-                  <div class="exercise-result" id="exercise-1-result">\(S=\{\}\)</div>
-                </div>
-
-              </div>
-
-              <div id="exercise-2" class="exercise">
-                <div id="exercise-2-title" class="exercise-title">
-                  <strong>Exercise 2:</strong> Find a minimal separator in the graph
-                </div>
-
-                <div class="exercise-2-content">
-                  <div class="exercise-result" id="exercise-2-result">\(S=\{\}\)</div>
-                  <div class="hint" id="exercise-2-hint-title">Show Hint</div>
-                  <div class="hint-content" id="exercise-2-hint-content">Recall that if any <a
-                      href="https://mathinsight.org/definition/proper_subset">proper subset</a> of your current set is a
-                    separator in the graph then it's not a minial separator.</div>
-                </div>
-              </div>
-
-              <div id="exercise-3" class="exercise">
-                <div id="exercise-3-title" class="exercise-title">
-                  <strong>Exercise 3:</strong> Find a balanced separator in the graph
-                </div>
-
-                <div class="exercise-3-content">
-                  <div class="exercise-result" id="exercise-3-result">\(S=\{\}\)</div>
-                  <div class="hint" id="exercise-3-hint-title">Show Hint</div>
-                  <div class="hint-content" id="exercise-3-hint-content">Recall that every component after you separate
-                    the graph must have fewer vertices than the graph's total vertices divided by 2.</div>
-                </div>
-
-
-              </div>
-            </div>
-          </div>
-          <div id="td-content">
-            <div>
-              Treewidth is a way to measure how tree-like a graph is.
-              <br /> <br />
-              Why do we care how much a graph is "like" a tree? It turns out if a graph is similar to a tree we can
-              turn that graph into a tree.
-              <br /><br />
-              This is important because many problems that are hard to solve on graphs are a lot easier to
-              solve on trees.
-              <br /><br />
-              Can you tell if the graph on the right side is tree-like?
-              <br /><br />
-              <div class="button" id="tw-answer">Click here to see the answer.</div>
-              <div id="tw-content">Not really. In the next chapter we will discuss a way to measure this.</div>
-            </div>
-          </div>
-          <div id="tree-decomposition-content">
-            some content goes here
-          </div>
-          <div class="nice-td-content">
-            <p>Nice td content....</p>
-            <p>Exercises</p>
-            <ul>
-              <li>Draw the nice tree decomposition of the current tree decomposition</li>
-            </ul>
-          </div>
-          <div class="algorithms-content">
-            <p>algorithms content....</p>
-          </div>
-          <div class="max-independent-set-content">
-            <button id="max-independent-set-button" class="pure-material-button-contained">Max Independent Set</button>
-            <div id="mis-content">
-              <table class="table">
-                <tbody id="tbody">
-                </tbody>
-              </table>
-            </div>
-          </div>
-          <div class="three-color-content">
-            <div class="h2">3 coloring content.....</div>
-            <button id="three-color-button" class="pure-material-button-contained">3-Coloring</button>
-            <table class="table">
-              <tbody id="three-color-body">
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-      <div id="middle-container">
-        <div id="graph-container">
-          <svg id="graph-svg">
-            <div class="graph-controls">
-              <i id="myBtn" class="material-icons md-48">help</i>
-              <i id="reset-draw-graph" class="material-icons md-48">palette</i>
-              <i id="random-graph-button" class="material-icons md-48">shuffle</i>
-              <div class="vertices-number-container">
-                <p>V = </p>
-                <span id="vertices-decrement" class="material-icons md-48">keyboard_arrow_left</span>
-                <span id="number-of-vertices">10</span>
-                <span id="vertices-increment" class="material-icons md-48">keyboard_arrow_right</span>
-              </div>
-              <div class="edges-number-container">
-                <p>E = </p>
-                <span id="edges-decrement" class="material-icons md-48">keyboard_arrow_left</span>
-                <span id="number-of-edges">10</span>
-                <span id="edges-increment" class="material-icons md-48">keyboard_arrow_right</span>
-              </div>
-
-
-              <div id="myModal" class="modal">
-
-                <!-- Modal content -->
-                <div class="modal-content">
-                  <span class="close">&times;</span>
-                  <div class="app-interface">
-                    <strong>
-                      <p>App Interface</p>
-                    </strong>
-                    <ul>
-                      <li>Add a vertex by left-clicking within the graph container</li>
-                      <li>Add an edge by dragging from one vertex to another</li>
-                      <li>Delete a vertex by right-clicking it</li>
-                      <li>Hold down CTRL to drag a vertex</li>
-                      <li>Reset drawing by clicking <i class="material-icons">palette</i></li>
-                      <li>Reload a random graph by clicking <i class="material-icons">shuffle</i></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-          </svg>
-        </div>
-        <div id="td-container">
-          <svg id="td-svg">
-            <div id="tree-decomposition-button" class="td-controls">
-              <!-- Create Tree Decomposition -->
-              <button class="pure-material-button-contained">Create Tree Decomposition</button>
-            </div>
-          </svg>
-        </div>
-      </div>
-      <div id="right-container">
-        <div id="nice-td-container">
-          <svg id='nice-td-svg'>
-            <span id="dp-arrow" class="material-icons">arrow_right_alt</span>
-            <div id="nice-tree-decomposition-button" class="nice-td-controls">
-              <button class="pure-material-button-contained">Compute Nice Tree Decomposition</button>
-            </div>
-          </svg>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id='control-keys-container'>
-    <div class="control-keys">
-      <div class="previous-text">
-        <a href="" class="previous">
-          <button class="pure-material-button-contained chapter-buttons">
-            Back
-          </button>
-        </a>
-      </div>
-      <div class="next-text">
-        <a href="" class="next">
-          <button class="pure-material-button-contained  chapter-buttons">
-            Next
-          </button>
-        </a>
-      </div>
-    </div>
-  </div>
-  <!-- Global Scripts -->
-
-  <!-- Katex -->
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"
-    integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz"
-    crossorigin="anonymous"></script>
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js"
-    integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous"
-    onload="renderMathInElement(document.body);"></script>
-
-  <!-- Force In A Box -->
-  <script type="text/javascript" src="https://unpkg.com/force-in-a-box/dist/forceInABox.js"></script>
-
-  <!-- Jquery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-
-  <!-- D3.js -->
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-
-  <!-- Content object -->
-  <script src="js/content.js"></script>
-
-  <!-- Control flow of the app -->
-  <script type="module" src=" js/controller.js"></script>
-
-  <!-- Custom Code -->
-
-  <!--   <script type="module" src="js/graph.js"></script>
-  <script type="module" src="js/niceTreeDecomposition.js"></script>
-  <script type="module" src="js/treeDecomposition.js"></script>
-  <script type="module" src="js/readTree.js"></script>
-  <script type="module" src="js/graphReader.js"></script>
-  <script type="module" src="js/helpers.js"></script>
-
-  <!-- Event listener for Katex -->
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      renderMathInElement(document.body, {
-        delimiters: [
-          { left: "$$", right: "$$", display: false },
-          { left: "\\[", right: "\\]", display: true },
-          { left: "$", right: "$", display: false },
-          { left: "\\(", right: "\\)", display: false }
-        ]
-        // ...options...
+    <!-- Event listener for Katex -->
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        renderMathInElement(document.body, {
+          delimiters: [
+            { left: '$$', right: '$$', display: false },
+            { left: '\\[', right: '\\]', display: true },
+            { left: '$', right: '$', display: false },
+            { left: '\\(', right: '\\)', display: false },
+          ],
+        });
       });
-    });
-  </script>
-</body>
-
+    </script>
+  </body>
 </html>
