--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css"
     integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css2?family=Walter+Turncoat&display=swap" rel="stylesheet" />
-  <title>Graph Width</title>
+  <link rel="shortcut icon" type="image/x-icon" href="./clique.png" />
+  <title>GraphWidth.com</title>
 </head>
 
 <body>
@@ -30,6 +31,7 @@
     onload="renderMathInElement(document.body);"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script type="module" src=" js/controller.js"></script>
+  <script type="module" src=" js/ChapterHandler.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/typeit@6.1.1/dist/typeit.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
