--- a/public/index.html
+++ b/public/index.html
@@ -5,23 +5,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css"
     integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous" />
-  <link href="https://fonts.googleapis.com/css2?family=Walter+Turncoat&display=swap" rel="stylesheet" />
-  <link rel="shortcut icon" type="image/x-icon" href="./clique.png" />
-  <title>GraphWidth.com</title>
-</head>
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Walter+Turncoat&display=swap" rel="stylesheet" /> -->
+  <link rel="shortcut icon" type="image/x-icon" href="Resources/clique.png" />
 
-<body>
-  <div class="main" id="main"></div>
-  <!-- Force In A Box -->
-  <!--     <script
-      type="text/javascript"
-      src="https://unpkg.com/force-in-a-box/dist/forceInABox.js"
-    ></script> -->
 
+  <script type="module" src="controller.js"></script>
+  <!-- <script type="module" src=" js/ChapterHandler.js"></script> -->
+  <script type="module" src="Utilities/d3-context-menu.js"></script>
 
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"
     integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz"
@@ -30,10 +24,10 @@
     integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous"
     onload="renderMathInElement(document.body);"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script type="module" src=" js/controller.js"></script>
-  <script type="module" src=" js/ChapterHandler.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/typeit@6.1.1/dist/typeit.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/force-in-a-box/dist/forceInABox.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/deepcopy@2.0.0/umd/deepcopy.min.js"></script>
   <script>
+
     document.addEventListener('DOMContentLoaded', function () {
       renderMathInElement(document.body, {
         delimiters: [
@@ -45,6 +39,20 @@
       });
     });
   </script>
+
+  <title>GraphWidth.com</title>
+</head>
+
+<body>
+  <nav class="nav">
+    <a href="/">
+      <div class="logo">
+        <img src="https://img.icons8.com/color/48/000000/graph-clique.png" />
+        <div class="logo-title">GraphWidth.com</div>
+      </div>
+    </a>
+  </nav>
+  <div class="main" id="main"></div>
 </body>
 
 </html>
