--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,13 @@
 
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css"
     integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous" />
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Walter+Turncoat&display=swap" rel="stylesheet" /> -->
   <link rel="shortcut icon" type="image/x-icon" href="Resources/clique.png" />
 
 
   <script type="module" src="controller.js"></script>
-  <!-- <script type="module" src=" js/ChapterHandler.js"></script> -->
   <script type="module" src="Utilities/d3-context-menu.js"></script>
 
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"
@@ -26,6 +25,7 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script type="text/javascript" src="https://unpkg.com/force-in-a-box/dist/forceInABox.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/deepcopy@2.0.0/umd/deepcopy.min.js"></script>
+  <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
   <script>
 
     document.addEventListener('DOMContentLoaded', function () {
@@ -43,7 +43,7 @@
   <title>GraphWidth.com</title>
 </head>
 
-<body>
+<body id="body">
   <nav class="nav">
     <a href="/">
       <div class="logo">
@@ -51,6 +51,9 @@
         <div class="logo-title">GraphWidth.com</div>
       </div>
     </a>
+    <a class="nav-item" id="chapter-button">chapters</a>
+    <a class="nav-item" id="sandbox-button">sandbox</a>
+    <a class="nav-item" id="github-button">github</a>
   </nav>
   <div class="main" id="main"></div>
 </body>
