--- a/public/index.html
+++ b/public/index.html
@@ -4,53 +4,30 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>GraphWidth.com</title>
 
-  <link rel="stylesheet" href="style.css" />
+  <!-- Material Icons from Google -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+
+  <!-- Materialize CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="style.css" />
+
+
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
+
+  <!-- Katex -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css"
     integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous" />
+
+  <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="Resources/clique.png" />
 
+  <!-- Codemirror -->
   <link rel="stylesheet" href="codemirror/lib/codemirror.css" rel="stylesheet" />
   <link rel="stylesheet" href="codemirror/theme/monokai.css" />
-
-  <script src="codemirror/lib/codemirror.js"></script>
-  <script src="codemirror/mode/javascript/javascript.js"></script>
-  <script src="codemirror/addon/edit/closebrackets.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.11.0/beautify.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.11.0/beautify-css.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.11.0/beautify-html.js"></script>
-
-  <script type="module" src="controller.js"></script>
-  <script type="module" src="Utilities/d3-context-menu.js"></script>
-
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"
-    integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz"
-    crossorigin="anonymous"></script>
-  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js"
-    integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous"
-    onload="renderMathInElement(document.body);"></script>
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script type="text/javascript" src="https://unpkg.com/force-in-a-box/dist/forceInABox.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/deepcopy@2.0.0/umd/deepcopy.min.js"></script>
-  <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-  <script>
-
-    document.addEventListener('DOMContentLoaded', function () {
-      renderMathInElement(document.body, {
-        delimiters: [
-          { left: '$$', right: '$$', display: false },
-          { left: '\\[', right: '\\]', display: true },
-          { left: '$', right: '$', display: false },
-          { left: '\\(', right: '\\)', display: false },
-        ],
-      });
-    });
-  </script>
-
-  <title>GraphWidth.com</title>
 </head>
 
 <body id="body">
@@ -67,6 +44,42 @@
     <a class="nav-item" id="github-button">github</a>
   </nav>
   <div class="main" id="main"></div>
+
+  <!-- JavaScript scripts -->
+
+  <!-- Codemirror -->
+  <script src="codemirror/lib/codemirror.js"></script>
+  <script src="codemirror/mode/javascript/javascript.js"></script>
+  <script src="codemirror/addon/edit/closebrackets.js"></script>
+
+  <!-- JS beautify -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.11.0/beautify.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.11.0/beautify-css.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.11.0/beautify-html.js"></script>
+
+  <!-- Custom scripts -->
+  <script type="module" src="controller.js"></script>
+  <script type="module" src="Utilities/d3-context-menu.js"></script>
+
+  <!-- Katex -->
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js"
+    integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz"
+    crossorigin="anonymous"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js"
+    integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous"
+    onload="renderMathInElement(document.body);"></script>
+
+  <!-- D3 -->
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+
+  <!-- D3 Colors -->
+  <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+
+  <!-- <script type="text/javascript" src="https://unpkg.com/force-in-a-box/dist/forceInABox.js"></script> -->
+
+  <!-- Deepcopy helper library -->
+  <script src="https://cdn.jsdelivr.net/npm/deepcopy@2.0.0/umd/deepcopy.min.js"></script>
+
 </body>
 
 </html>
