--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
   <div class="main" id="main"></div>
 
   <!-- JavaScript scripts -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/7.10.4/polyfill.min.js"></script>
 
   <!-- Codemirror -->
   <script defer src="codemirror/lib/codemirror.js"></script>
