--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>GraphWidth.com</title>
+  <title>GraphWidth - Learn Graph Width Measures Interactively</title>
+
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="Resources/favicon.ico" />
 
   <!-- Material Icons from Google -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
@@ -21,18 +24,36 @@
   <link defer rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css"
     integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous" />
 
-
   <!-- Codemirror -->
   <link defer rel="stylesheet" href="./Utilities/codemirror/lib/codemirror.css" rel="stylesheet" />
-  <link defer rel="stylesheet" href="./Utilities/codemirror/theme/monokai.css" />
+  <link defer rel="stylesheet" href="./Utilities/codemirror/theme/material-palenight.css" />
 
 </head>
 
 <body id="body">
   <nav class="nav">
-    <a class="nav-item" id="chapter-button">Chapters</a>
-    <a class="nav-item" id="sandbox-button">Sandbox</a>
-    <a class="nav-item" id="custom-algorithm-button">Custom Algorithm</a>
+    <a class="nav-item nav-logo" href="/">
+      <img src="Resources/Component 1.png" class="nav-comp"></img>
+      GraphWidth
+    </a>
+    <section class="nav-links nav-item">
+      <ul class="nav-item">
+        <li><a class="chapter-button" href="#">Chapters<span class="material-icons">
+              arrow_drop_down
+            </span></a>
+          <ul>
+            <li><a id="graph-separator-link">1. Graph Separators</a></li>
+            <li><a id="treewidth-link">2. Treewidth & Tree Decompositions</a></li>
+            <li><a id="nice-link">3. Nice Tree Decompositions</a></li>
+            <li><a id="algo-link">4. Algorithms on Tree Decompositions</a></li>
+          </ul>
+        </li>
+      </ul>
+      <a class="nav-item" id="sandbox-button">Sandbox</a>
+      <a class="nav-item" id="custom-algorithm-button">Custom Algorithm</a>
+      <!-- <a target="_blank" href="https://github.com/FrederikJorgensen/graph-width-visualizer">Github</a> -->
+    </section>
+
   </nav>
   <div class="main" id="main"></div>
 
