pseudo code for DP algorithm hamiltonian path

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,6 @@
       </ul>
       <a class="nav-item" id="sandbox-button">Sandbox</a>
       <a class="nav-item" id="custom-algorithm-button">Custom Algorithm</a>
-      <!-- <a target="_blank" href="https://github.com/FrederikJorgensen/graph-width-visualizer">Github</a> -->
     </section>
 
   </nav>
@@ -86,7 +85,7 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
 
   <!-- D3 Colors -->
-  <script defer src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+  <!-- <script defer src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script> -->
 
   <!-- <script type="text/javascript" src="https://unpkg.com/force-in-a-box/dist/forceInABox.js"></script> -->
 
