--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
   <!-- D3 Colors -->
   <!-- <script defer src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script> -->
 
-  <!-- <script type="text/javascript" src="https://unpkg.com/force-in-a-box/dist/forceInABox.js"></script> -->
+  <script type="text/javascript" src="https://unpkg.com/force-in-a-box/dist/forceInABox.js"></script>
 
   <!-- Deepcopy helper library -->
   <script defer src="https://cdn.jsdelivr.net/npm/deepcopy@2.0.0/umd/deepcopy.min.js"></script>
