--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
     </div>
 
     <div class="main" id="main"></div>
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- Codemirror -->
     <script defer src="Utilities/codemirror/lib/codemirror.js"></script>
     <script
