fix: Change JS script type to module

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>GraphWidth - An interactive way to learn graph width measures</title>
 
     <!-- Custom scripts -->
-    <script src="controller.js"></script>
+    <script type="module" src="controller.js"></script>
     <script defer src="Utilities/d3-context-menu.js"></script>
     <link
       rel="shortcut icon"
