--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>GraphWidth - An interactive way to learn graph width measures</title>
   <link rel="shortcut icon" type="image/x-icon" href="Resources/GraphWidthLogo.svg" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="src/style.css" />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans" />
   <link defer rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css"
     integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous" />
@@ -25,8 +25,8 @@
   <script type="text/javascript" src="https://unpkg.com/force-in-a-box/dist/forceInABox.js"></script>
   <script src="https://d3js.org/d3-ease.v1.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/deepcopy@2.0.0/umd/deepcopy.min.js"></script>
-  <script type="module" src="controller.js"></script>
-  <script defer src="Utilities/d3-context-menu.js"></script>
+  <script type="module" src="dist/src/controller.js"></script>
+  <script defer src="src/Utilities/d3-context-menu.js"></script>
 </body>
 
 </html>
